[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biggr"
version = "0.1.0"
description = "Easy access to the BiGGr API."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL"}
authors = [
    {name = "Pascal A. Pieters", email = "pascalaldo@gmail.com"},
]
keywords = ["systems biology", "genome-scale model"]
classifiers = [
    "License :: OSI Approved :: GPL License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests~=2.32",
]

[project.urls]
Homepage = "https://github.com/pascalaldo/biggr"

[tool.setuptools.packages.find]
include = ["biggr*"]
